--- a/javascript/JSON/tasks.json
+++ b/javascript/JSON/tasks.json
@@ -10,12 +10,12 @@
       "category": "User Story",
       "subtasks": [
         {
-          "id": 1,
+          "id": 0,
           "description": "Unteraufgabe 1 für Aufgabe 1",
           "status": "To Do"
         },
         {
-          "id": 2,
+          "id": 1,
           "description": "Unteraufgabe 2 für Aufgabe 1",
           "status": "Done"
         }
@@ -26,13 +26,22 @@
       "title": "Aufgabe 2",
       "description": "Beschreibung für Aufgabe 2",
       "status": "In progress",
-      "assign_to": "Erika Musterfrau",
+      "assign_to": [
+        {
+          "id": 0,
+          "member": "Erika Musterfrau"
+        },
+        {
+          "id": 1,
+          "member": "Max Mustermann"
+        }
+      ],
       "due_date": "2024-03-15",
       "prio": "medium",
       "category": "User Story",
       "subtasks": [
         {
-          "id": 1,
+          "id": 0,
           "description": "Unteraufgabe 1 für Aufgabe 2",
           "status": "To Do"
         }
